<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <Button
            android:id="@+id/button_query"
            android:layout_height="wrap_content"
            android:layout_width="50dp"
            android:text="@string/db_query"/>
        <Button
            android:id="@+id/button_insert"
            android:layout_height="wrap_content"
            android:layout_width="50dp"
            android:text="@string/db_insert"/>
        <Button
            android:id="@+id/button_delete"
            android:layout_height="wrap_content"
            android:layout_width="50dp"
            android:text="@string/db_delete"/>
        <Button
            android:id="@+id/button_update"
            android:layout_height="wrap_content"
            android:layout_width="50dp"
            android:text="@string/db_update"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/edit_name"
            android:layout_height="wrap_content"
            android:layout_width="50dp"
            android:hint="@string/hint_name"/>

        <EditText
            android:id="@+id/edit_sex"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:hint="@string/hint_sex"/>

        <EditText
            android:id="@+id/edit_age"
            android:layout_height="wrap_content"
            android:layout_width="50dp"
            android:hint="@string/hint_age"/>

        <EditText
            android:id="@+id/edit_tel"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:hint="@string/hint_tel"/>

    </LinearLayout>

    <ListView
        android:id="@+id/user_list"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"/>

</LinearLayout>